--- a/todo.html
+++ b/todo.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Todo List</title>
-    <link rel="stylesheet" href="./styles/todo.css">
-  </head>
-  <body>
-    <p>Todo List</p>
 
-    <div class="todo-input-grid">
-      <input placeholder="Todo name"
-        class="js-name-input name-input">
-      <input type="date"
-        class="js-due-date-input due-date-input">
-      <button class="add-todo-button js-add-todo-button">Add</button>
-    </div>
+<head>
+  <title>Todo List</title>
+  <link rel="stylesheet" href="./styles/todo.css">
+</head>
 
-    <div class="js-todo-list todo-grid"></div>
+<body>
+  <p>Todo List</p>
 
-    <script src="./todo.js" type="text/javascript"></script>
-  </body>
+  <div class="todo-input-grid">
+    <input placeholder="Todo name" class="js-name-input name-input">
+    <input type="date" class="js-due-date-input due-date-input">
+    <button class="add-todo-button js-add-todo-button">Add</button>
+  </div>
+
+  <div class="js-todo-list todo-grid"></div>
+
+  <script src="./todo.js" type="text/javascript"></script>
+</body>
+
 </html>
